swagger now works
